--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=8f3e311917b25cdc5a09f11ad4f34bb2
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
-DATABASE_URL="mysql://admin:12345@127.0.0.1:3306/to-do-app?serverVersion=mariadb-10.4.11"
+DATABASE_URL="mysql://username:userpass@mysql:3306/databasename"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
